@@ -81,7 +81,8 @@
               failonerror="true"
               classpath="${env.S1AS_HOME}/lib/javaee.jar:${env.S1AS_HOME}/modules/jakarta.jms-api.jar:${env.S1AS_HOME}/lib/gf-client.jar:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${simple.client}">
-        </java>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+       </java>
     </target>
 
     <target name="undeploy" depends="init-common">
