@@ -132,6 +132,8 @@
               classpath="${test-path}:${assemble.dir}/${appname}-pu.jar:${embedded.classpath}:${build.classes.dir}:${env.APS_HOME}/lib/reporter.jar"
               classname="${se.client}">
            <jvmarg value="-Dorg.glassfish.ejb.embedded.keep-temporary-files=true"/>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+           <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
            <arg line="${appname}"/>
            <arg line="${test}"/>
            <arg line="${packaging}"/>
